[tool.poetry]
name = "ThemeSearcher"
version = "0.1.0"
description = ""
authors = ["aK0nshin <kon2work@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.103.2"
uvicorn = "^0.23.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
